Feat: Adicionando detalhes do tipo de peca na gestao de corte

--- a/public/locales/de/planner.json
+++ b/public/locales/de/planner.json
@@ -21,5 +21,9 @@
   "summary": "Zusammenfassung",
   "utilization": "Auslastung",
   "occupied_area": "Belegter Bereich",
-  "total_area": "Gesamtfläche"
+  "total_area": "Gesamtfläche",
+  "type": "Typ",
+  "polygon": "Polygon",
+  "circle": "Kreis",
+  "sides": "Seiten"
 }
