--- a/public/locales/en/planner.json
+++ b/public/locales/en/planner.json
@@ -21,5 +21,9 @@
   "summary": "Summary",
   "utilization": "Utilization",
   "occupied_area": "Occupied Area",
-  "total_area": "Total Area"
+  "total_area": "Total Area",
+  "type": "Type",
+  "polygon": "Polygon",
+  "circle": "Circle",
+  "sides": "Sides"
 }
