--- a/public/locales/fr/planner.json
+++ b/public/locales/fr/planner.json
@@ -21,5 +21,9 @@
   "summary": "Résumé",
   "utilization": "Utilisation",
   "occupied_area": "Zone occupée",
-  "total_area": "Surface totale"
+  "total_area": "Surface totale",
+  "type": "Type",
+  "polygon": "Polygone",
+  "circle": "Cercle",
+  "sides": "Côtés"
 }
